--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>BookStoreAngularJurijs</title>
-  <base href="/">
+  <base href="/training-website/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="mat-typography">
